# terminal-assistant

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-app.yml
src/assistant/: main.py
tests/: test_logic.py  test_utils.py
